--- a/introKanji.html
+++ b/introKanji.html
@@ -18,7 +18,7 @@
     <header>
         <div class="container-fluid">
 
-            <img class="logo rounded mx-auto d-block img-fluid" src="assets/img/logo_small.png" alt="logo">
+            <a href="index.html"><img class="logo rounded mx-auto d-block img-fluid" src="assets/img/logo_small.png" alt="logo"></a>
 
 
         </div>
