--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <div class="container-fluid">
 
-            <img class="logo rounded mx-auto d-block img-fluid" src="assets/img/logo_small.png" alt="logo">
+            <a href="index.html"><img class="logo rounded mx-auto d-block img-fluid" src="assets/img/logo_small.png" alt="logo"></a>
 
 
         </div>
