--- a/introKanji.html
+++ b/introKanji.html
@@ -18,7 +18,8 @@
     <header>
         <div class="container-fluid">
 
-            <a href="index.html"><img class="logo rounded mx-auto d-block img-fluid" src="assets/img/logo_small.png" alt="logo"></a>
+            <a href="index.html"><img class="logo rounded mx-auto d-block img-fluid" src="assets/img/logo_small.png"
+                    alt="logo"></a>
 
 
         </div>
@@ -63,10 +64,15 @@
             </div>
         </div>
     </nav>
-    <main><p>Les kanjis</p></main>
+    <main>
+        <p>Les kanjis</p>
+    </main>
     <h3>めんどくさい</h3>
     <footer></footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+    </script>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
