--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <header>
         <div class="container-fluid">
 
-            <a href="index.html"><img class="logo rounded mx-auto d-block img-fluid" src="assets/img/logo_small.png" alt="logo"></a>
+            <a href="index.html"><img class="logo rounded mx-auto d-block img-fluid" src="assets/img/logo_small.png"
+                    alt="logo"></a>
 
 
         </div>
@@ -34,7 +35,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Acceuil</a>
+                        <a class="nav-link active" href="#">Accueil</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="introductionKana.html">Introduction aux kanas</a>
@@ -55,7 +56,7 @@
                             <li><a class="dropdown-item" href="#">Exercices de vocabulaire</a></li>
                         </ul>
                     <li class="nav-item">
-                        <a class="nav-link active" id="inscription" href="#">S'inscrire</a>
+                        <a class="nav-link active" id="inscription" href="inscription.html">S'inscrire</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Connexion</a>
@@ -70,7 +71,8 @@
                 <img class="temple" src="assets/img/temple.jpg" alt="">
                 <div class="divtext">
                     <h1>ようこそ!</h1>
-                    <p class="intro"><br><br>Bienvenue sur Kana Gaku. Sur ce site vous pourrez apprendre vos hiraganas et vos
+                    <p class="intro"><br><br>Bienvenue sur Kana Gaku. Sur ce site vous pourrez apprendre vos hiraganas
+                        et vos
                         katakanas.
                         Vous aurez également l'occasion d'apprendre du vocabulaire et de vous exercer.<br>がんばってください!</p>
                 </div>
@@ -83,7 +85,17 @@
 
     </main>
 
-    <footer><img class="logoIcon" src="assets/img/logo_small_icon_only_inverted.png" alt=""></footer>
+    <footer>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-4">Kana Gaku ©2000-2021
+                </div>
+                <div class="col-4">Mentions légales<img class="logoIcon" src="assets/img/logo_small_icon_only.png" alt=""></div>
+                <div class="col-4">Contact</div>
+            
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
