--- a/inscription.html
+++ b/inscription.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Introduction aux Kanjis</title>
+    <title>Inscription</title>
 </head>
 
 <body>
@@ -64,11 +64,27 @@
             </div>
         </div>
     </nav>
+
     <main>
-        <p>Les kanjis</p>
+        <form>
+            <fieldset>
+                <legend>Inscription d'un nouveau compte</legend>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Adresse mail</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Adresse mail">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputPassword1" class="form-label" >Mot de passe</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Mot de passe">
+                </div>
+                <div class="mb-3 form-check">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                </div>
+                <button id="inscriptionValid" type="submit" class="btn btn-primary">Valider mon inscription</button>
+            </fieldset>
+        </form>
     </main>
-    <h3>めんどくさい</h3>
-    <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
