--- a/introductionKana.html
+++ b/introductionKana.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Introduction aux Kanas</title>
 </head>
 
 <body>
@@ -33,10 +33,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Acceuil</a>
+                        <a class="nav-link active" href="index.html">Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Introduction aux kanas</a>
+                        <a class="nav-link active" href="introductionKana.html">Introduction aux kanas</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="introKanji.html">Introduction aux kanjis</a>
@@ -54,7 +54,7 @@
                             <li><a class="dropdown-item" href="#">Exercices de vocabulaire</a></li>
                         </ul>
                     <li class="nav-item">
-                        <a class="nav-link active" id="inscription" href="#">S'inscrire</a>
+                        <a class="nav-link active" id="inscription" href="inscription.html">S'inscrire</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Connexion</a>
