--- a/introductionKana.html
+++ b/introductionKana.html
@@ -64,7 +64,8 @@
         </div>
     </nav>
     <main>
-        <p>Les Kanas sont un ensemble de deux syllabaires composés de 46 caractères chacun : les hiraganas et les
+       <div class="textKana">
+           <p>Les Kanas sont un ensemble de deux syllabaires composés de 46 caractères chacun : les hiraganas et les
             katakanas.<br></p>
              <p class="indent">· les hiraganas (平仮名、ひらがな), sont utilisés dans un but grammatical pour écrire les
                 particules
@@ -76,6 +77,7 @@
            <p>L'ordre des traits est important en japonais, ci-dessous des tableaux montrant les kanas de l'ordre de leurs
             traits.
         </p>
+        </div>
         <figure>
             <figcaption>Tableau des hiraganas</figcaption>
             <img src="assets/img/Table_hiragana.svg" alt="tableau des hiraganas">
