--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
 <body>
     <header><nav class="navbar navbar-default fixed-top navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img  class="logo" src="assets/img/logo_small.png" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <img  class="logo" src="assets/img/logo_small.png" alt="">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 justify-content-end">
+                
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Accueil</a>
                     </li>
@@ -49,7 +50,7 @@
                     <li class="nav-item">
                         <a class="nav-link active" id="inscription" href="inscription.html">S'inscrire</a>
                     </li>
-                    <li class="nav-item justify-content-end">
+                    <li class="nav-item">
                         <a class="nav-link active" href="#">Connexion</a>
                     </li>
                     
@@ -67,16 +68,16 @@
             </span>
         </div>
     </div>
-    <div style="height:500px;background-color:white;font-size:36px">
+    <div class="introText">
 
-        <p>Bienvenue sur Kana Gaku. Sur ce site vous pourrez apprendre vos hiraganas
+        <h1>Bienvenue sur Kana Gaku.</h1> <p>Sur ce site vous pourrez apprendre vos hiraganas
             et vos
             katakanas.
             Vous aurez également l'occasion d'apprendre du vocabulaire et de vous exercer.<br>がんばってください!</p>
     </div>
     <p>test test</p>
 </main>
-<footer></footer>
+<footer><a href="https://fr.freepik.com/vecteurs/batiment">Bâtiment vecteur créé par pikisuperstar - fr.freepik.com</a></footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
