--- a/introKanji.html
+++ b/introKanji.html
@@ -16,59 +16,65 @@
 
 <body>
     <header>
-        <div class="container-fluid">
+        <nav class="navbar navbar-default fixed-top navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html"><img class="logo" src="assets/img/logo_small.png" alt="logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-            <a href="index.html"><img class="logo rounded mx-auto d-block img-fluid" src="assets/img/logo_small.png"
-                    alt="logo"></a>
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="index.html">Accueil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="introductionKana.html">Introduction aux kanas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="introKanji.html">Introduction aux kanjis</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#vocabulary">Vocabulaire</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Exercices
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="#">Exercices de kanas</a></li>
+                                <li><a class="dropdown-item" href="#">Exercices de vocabulaire</a></li>
+                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link active" id="inscription" href="inscription.html">S'inscrire</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Connexion</a>
+                        </li>
 
 
-        </div>
-    </header>
-    <nav class="navbar navbar-default sticky-top navbar-expand-lg navbar-light">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Accueil</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="introductionKana.html">Introduction aux kanas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="introKanji.html">Introduction aux kanjis</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#vocabulary">Vocabulaire</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Exercices
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Exercices de kanas</a></li>
-                            <li><a class="dropdown-item" href="#">Exercices de vocabulaire</a></li>
-                        </ul>
-                    <li class="nav-item">
-                        <a class="nav-link active" id="inscription" href="inscription.html">S'inscrire</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Connexion</a>
-                    </li>
-
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
     <main>
         <p>Les kanjis</p>
+        <h3>めんどくさい</h3>
     </main>
-    <h3>めんどくさい</h3>
-    <footer></footer>
+
+    <footer>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-4">Kana Gaku ©2000-2021</div>
+                <div class="col-4">test</div>
+                <div class="col-4">test</div>
+            </div>
+        </div>
+        
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
