--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <nav class="navbar navbar-default fixed-top navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html"><img class="logo" src="assets/img/logo_small.png" alt="logo"></a>
+                <a class="navbar-brand" href="index.html"><img class="logo" src="assets/img/logo_small.png" title="logo KanaGaku" alt="logo KanaGaku"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -69,9 +69,11 @@
                 </span>
             </div>
         </div>
+        <div>
+        <h1>Bienvenue sur Kana Gaku.</h1>
         <div class="introText">
 
-            <h1>Bienvenue sur Kana Gaku.</h1>
+
             <p>Sur ce site vous pourrez apprendre vos hiraganas
                 et vos
                 katakanas.
