--- a/inscription.html
+++ b/inscription.html
@@ -80,6 +80,10 @@
                     <label for="exampleInputPassword1" class="form-label" >Mot de passe</label>
                     <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Mot de passe">
                 </div>
+                <div class="mb-3">
+                    <label for="exampleInputPassword1" class="form-label" >Confirmation du mot de passe</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Mot de passe">
+                </div>
                 <div class="mb-3 form-check">
                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
                     <label class="form-check-label" for="exampleCheck1">Check me out</label>
