--- a/introductionKana.html
+++ b/introductionKana.html
@@ -18,7 +18,8 @@
     <header>
         <nav class="navbar navbar-default fixed-top navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html"><img class="logo" src="assets/img/logo_small.png" alt="logo"></a>
+                <a class="navbar-brand" href="index.html"><img class="logo" src="assets/img/logo_small.png"
+                        alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -61,35 +62,65 @@
         </nav>
     </header>
     <main>
-       <div class="textKana">
-           <p>Les Kanas sont un ensemble de deux syllabaires composés de 46 caractères chacun : les hiraganas et les
-            katakanas.<br></p>
-             <p class="indent">· les hiraganas (平仮名、ひらがな), sont utilisés dans un but grammatical pour écrire les
-                particules
-                et pour retranscrire la prononciation des kanjis qui eux sont des idéogrammes.</p><br>
-           <p class="indent">· les katakanas (カタカナ、片仮名) sont utilisés pour retranscrire les mots d'origine étrangère.
-                Ces deux syllabaires sont utilisés avec les kanjis qui sont des idéogrammes venus de Chine et dont je
-                vais
-                vous parler <a  href="introKanji.html">ici.</a></p><br>
-           <p>L'ordre des traits est important en japonais, ci-dessous des tableaux montrant les kanas de l'ordre de leurs
-            traits.
-        </p>
+        <div class="container-fluid">
+            <div class="textKana">
+                <p>Les Kanas sont un ensemble de deux syllabaires composés de 46 caractères chacun : les hiraganas et
+                    les
+                    katakanas.<br></p>
+                <p class="indent">· les hiraganas (平仮名、ひらがな), sont utilisés dans un but grammatical pour écrire les
+                    particules
+                    et pour retranscrire la prononciation des kanjis qui eux sont des idéogrammes.</p><br>
+                <p class="indent">· les katakanas (カタカナ、片仮名) sont utilisés pour retranscrire les mots d'origine
+                    étrangère.
+                    Ces deux syllabaires sont utilisés avec les kanjis qui sont des idéogrammes venus de Chine et dont
+                    je
+                    vais
+                    vous parler <a href="introKanji.html">ici.</a></p><br>
+                <p>L'ordre des traits est important en japonais, ci-dessous des tableaux montrant les kanas de l'ordre
+                    de leurs
+                    traits.
+                </p>
+            </div>
+            <div class="row">
+                <div class="col-12 col-lg-6">
+                    <figure>
+                        <figcaption>Tableau des hiraganas</figcaption>
+                        <img src="assets/img/Table_hiragana.svg" data-bs-toggle="modal" data-bs-target="#hiraModal"
+                            alt="tableau des hiraganas">
+                    </figure>
+                </div>
+                <div class="modal fade" id="hiraModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <img class="hiraganaModal" src="assets/img/Table_hiragana.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <figure>
+                        <figcaption>Tableau des katakanas</figcaption>
+                        <img src="assets/img/1152px-Table_katakana.svg.png" data-bs-toggle="modal"
+                            data-bs-target="#kataModal" alt="Tableau des katakanas">
+                    </figure>
+                </div>
+                <div class="modal fade" id="kataModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <img class="hiraganaModal" src="assets/img/1152px-Table_katakana.svg.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <figure>
-            <figcaption>Tableau des hiraganas</figcaption>
-            <img src="assets/img/Table_hiragana.svg" alt="tableau des hiraganas">
-        </figure>
-        <figure>
-            <figcaption>Tableau des katakanas</figcaption>
-            <img src="assets/img/1152px-Table_katakana.svg.png" alt="Tableau des katakanas">
-        </figure>
     </main>
 
     <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-</script>
-<script src="assets/js/script.js"></script>
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+    </script>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
