--- a/introductionKana.html
+++ b/introductionKana.html
@@ -53,7 +53,7 @@
                             <a class="nav-link active" id="inscription" href="inscription.html">S'inscrire</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Connexion</a>
+                            <a class="nav-link active" href="connexion.html">Connexion</a>
                         </li>
 
 
